[gd_scene load_steps=15 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://new_shader.extshader" type="Shader" id=2]
[ext_resource path="res://addons/sisilicon.shaders.extended-shader/Hack_Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://TextEdit.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.141176, 0.129412, 0.145098, 0 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.141176, 0.129412, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.141176, 0.129412, 0.145098, 0 )

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )
HBoxContainer/constants/separation = 4
Panel/styles/panel = null

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.0313726 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://addons/sisilicon.shaders.extended-shader/Hack_Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 2 )
shader_param/cellular2d_jitter = null
shader_param/cellular_2x2_jitter = null
shader_param/cellular_2x2x2_jitter = null
shader_param/cellular_3d_jitter = null

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_right = 1024.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )

[node name="ToolButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 20.0
text = "Some"

[node name="ToolButton2" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 106.0
margin_bottom = 20.0
text = "Buttons"

[node name="ToolButton3" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 164.0
margin_bottom = 20.0
text = "I guess"

[node name="Control" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Control"]
margin_right = 510.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
text = "#include \"canvasitem_header.extshader\"                                       
WWWW W
2
#define PURPLE

#define PURPLCOL vec3(1.0, 0.2, 1.0)

uniform vec3 pos;

void fragment() { 
	COLOR = texture(TEXTURE, UV);
#ifdef PURPLE
	COLOR.rgb = COLOR.rgb * PURPLCOL;
#endif
}




"
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
hiding_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
highlight_color = Color( 0.764706, 0.764706, 0.764706, 0.180392 )
error_color = Color( 0.882353, 0.129412, 0.129412, 0.4 )
sprite_path = NodePath("../Sprite")

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/Control"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_icons/tab = ExtResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 8 )
text = "/**** INCLUDED FROM  \"canvasitem_header.extshader\" ****/
shader_type canvas_item;


/**** END OF INCLUDE FROM  \"canvasitem_header.extshader\" ****/



uniform vec3 pos;

void fragment() { 
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = COLOR.rgb * vec3(1.0, 0.2, 1.0);
}

"
readonly = true
syntax_highlighting = true
show_line_numbers = true
smooth_scrolling = true
script = ExtResource( 5 )
sprite_path = NodePath("../Sprite")

[node name="Sprite" type="Sprite" parent="VBoxContainer/Control"]
material = SubResource( 9 )
position = Vector2( 512, 452 )
scale = Vector2( 3, 3 )
z_index = 10
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Timer" type="Timer" parent="VBoxContainer/Control"]
wait_time = 2.0
one_shot = true

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 472.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.29
custom_styles/focus = SubResource( 5 )
syntax_highlighting = true

[connection signal="cursor_changed" from="VBoxContainer/Control/TextEdit" to="VBoxContainer/Control/TextEdit" method="_on_TextEdit_cursor_changed"]
[connection signal="text_changed" from="VBoxContainer/Control/TextEdit" to="VBoxContainer/Control" method="_on_TextEdit_text_changed"]
[connection signal="timeout" from="VBoxContainer/Control/Timer" to="VBoxContainer/Control" method="_on_Timer_timeout"]
